package com.vocabest.core.adapter.out.persistence.model;

public enum Role {
    LEARNER,
    ADMIN
}
