package com.vocabest.core.adapter.out.persistence.model;

public enum TargetLevel {
    JUNIOR_HIGH,
    SENIOR_HIGH
}
