@startuml
skinparam style strictuml
title Domain Model - Vocabest Core

package "Core Domain" {
    class User <<Entity>> {
        +String id
        +String email
        +Role role <<Enum>>
        +TargetLevel targetLevel <<Enum>>
        +Integer dailyTargetQuestions
        +Integer learningStreak
    }

    class DailyProgress <<Entity>> {
        +String id
        +DateTime date
        +Integer targetQuestions
        +Integer answeredQuestions
        +Integer correctQuestions
        +Integer wrongQuestions
    }

    class WordBank <<Entity>> {
        +String id
        +String word
        +String partsOfSpeech
        +String chineseTranslation
        +TargetLevel targetLevel <<Enum>>
        +Integer difficultyLevel
        +Integer examFrequency
    }

    class QuizQuestion <<Entity>> {
        +String id
        +String contextualCloze
        +String chineseTranslation
        +String correctAnswer
        +String distractor1
        +String distractor2
        +String distractor3
        +String explanationRootAffix
        +String explanationMnemonic
    }

    class WordMastery <<Entity>> {
        +String id
        +Integer errorWeight
        +DateTime nextReviewDate
    }

    class ErrorEvent <<Entity>> {
        +String id
        +DateTime timestamp
        +String selectedDistractor
    }
}

package "Persistence Contracts" {
    interface UserRepository <<Interface>> {
        +Create(User data): User
        +GetById(String id): User?
        +Update(String id, User delta): User
        +Delete(String id): Boolean
    }

    interface DailyProgressRepository <<Interface>> {
        +Create(DailyProgress data): DailyProgress
        +GetById(String id): DailyProgress?
        +Update(String id, DailyProgress delta): DailyProgress
        +Delete(String id): Boolean
    }

    interface WordBankRepository <<Interface>> {
        +Create(WordBank data): WordBank
        +GetById(String id): WordBank?
        +Update(String id, WordBank delta): WordBank
        +Delete(String id): Boolean
    }

    interface QuizQuestionRepository <<Interface>> {
        +Create(QuizQuestion data): QuizQuestion
        +GetById(String id): QuizQuestion?
        +Update(String id, QuizQuestion delta): QuizQuestion
        +Delete(String id): Boolean
    }

    interface WordMasteryRepository <<Interface>> {
        +Create(WordMastery data): WordMastery
        +GetById(String id): WordMastery?
        +Update(String id, WordMastery delta): WordMastery
        +Delete(String id): Boolean
    }

    interface ErrorEventRepository <<Interface>> {
        +Create(ErrorEvent data): ErrorEvent
        +GetById(String id): ErrorEvent?
        +Update(String id, ErrorEvent delta): ErrorEvent
        +Delete(String id): Boolean
    }
}

' Relationships
User "1" *-- "*" DailyProgress : "tracks"
User "1" *-- "*" WordMastery : "owns"
User "1" *-- "*" ErrorEvent : "generates"
WordBank "1" *-- "*" QuizQuestion : "composes"
WordMastery "*" o-- "1" WordBank : "references"
ErrorEvent "*" o-- "1" QuizQuestion : "references"

enum Role {
    LEARNER
    ADMIN
}

enum TargetLevel {
    JUNIOR_HIGH
    SENIOR_HIGH
}

note right of User : ID MUST be a UUID v4
@enduml
